--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Ruby on Rails Developer</p>
-            <p>March 2019 &mdash; currently</p>
+            <p>March 2019 &mdash; August 2019</p>
             <p>SoftTelematics, Moscow, Russia</p>
             <p><a href="https://natelsys.ru/">Official site</a></p>
           </div>
@@ -211,6 +211,14 @@
               <li>Optimization and refactoring code.</li>
               <li>Writing integration and unit tests.</li>
               <li>Fixing user bugs.</li>
+            </ul>
+            <p class="margin-bottom-1x">
+              On 11 March 2019, I got a third job as a Ruby on Rails developer at SoftTelematics. I was developing the unified digital system
+              of toll roads in Russia. After 6 months of work, I made a decision to leave the company for several reasons:
+            </p>
+            <ul>
+              <li>The company did not completely perform own agreements, but partially performed them (remote job).</li>
+              <li>Staff reductions.</li>
             </ul>
           </div>
         </div>
@@ -230,7 +238,7 @@
               <li>Fixing user bugs.</li>
             </ul>
             <p>
-              On May 28, 2018, I got a second job as an engineer-programmer at EOS (electronic office systems). I was developing an electronic
+              On 28 May 2018, I got a second job as a software engineer at EOS (electronic office systems). I was developing an electronic
               document management system developed on the basis of the Microsoft SharePoint platform. After 3 months of work, the company
               management could not find me the amount of work for my position, because the company hired me as a junior specialist, and I left
               the company.
@@ -253,7 +261,7 @@
               <li>Configuring the CRM system.</li>
             </ul>
             <p>
-              On January 23, 2017, after graduating from university, I got a first job as a programmer at TOPCRM LLC. I was developing a CRM
+              On 23 January 2017, after graduating from university, I got a first job as a programmer at TOPCRM LLC. I was developing a CRM
               system on the Terrasoft BPM'Online platform. After 15 months of successful work in the company, I began to understand that I
               don't want to work here anymore because of the negative experience of developing the Terrasoft BPM'Online platform, and also
               because I had a little different idea of the programmer work. As a result, I left the company and I didn't want to develop the
