--- a/russian_index.html
+++ b/russian_index.html
@@ -201,7 +201,7 @@
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Разработчик Ruby on Rails</p>
-            <p>Март 2019 &mdash; по настоящее время</p>
+            <p>Март 2019 &mdash; Август 2019</p>
             <p>СофтТелематика, Москва, Россия</p>
             <p><a href="https://natelsys.ru/">Официальный сайт</a></p>
           </div>
@@ -212,6 +212,15 @@
               <li>Оптимизация и рефакторинг кода.</li>
               <li>Написание интеграционных и юнит тестов.</li>
               <li>Исправление возникающих ошибок у пользователей.</li>
+            </ul>
+            <p class="margin-bottom-1x">
+              11 марта 2019 года я устроился на третью работу на должность разработчика Ruby on Rails в компанию СофтТелематика. Я
+              занимался разработкой системы ЕЦПВП &mdash; единая цифровая платформа взимания платы на платных дорогах России. После 6
+              месяцев работы я принял решение уволиться из компании по нескольким причинам:
+            </p>
+            <ul>
+              <li>Компания не выполнила свои договорённости полностью, но выполнила их частично (удалённая работа).</li>
+              <li>Сокращение штата.</li>
             </ul>
           </div>
         </div>
