Migrate links, update resume

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
               After graduating from university, I found a job as a programmer. My main programming language was C# and I had been developing
               applications for a year and a half. At that time, I managed to work in two companies. But, unfortunately, for various reasons, I
               had to leave these companies and look for a new job, where I could work in a professional team, constantly improve my level of
-              development and become a C # developer at a decent level. All my attempts to find a job were unsuccessful. And I needded to
-              somehow solve this problem: either I continue to study and practice the C # programming language or completely change my
+              development and become a C# developer at a decent level. All my attempts to find a job were unsuccessful. And I needded to
+              somehow solve this problem: either I continue to study and practice the C# programming language or completely change my
               professional activity. I chose the first solution, but instead of learning the C# programming language, I began to learn the
               Ruby and Ruby on Rails. So, I wanted to become a Ruby on Rails developer, despite my negative experiences in the past.
             </p>
@@ -147,6 +147,7 @@
             <ul>
               <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; It is a Web application, a clone of the famous Web site <a href="https://ask.fm/">ask.fm</a>.</li>
               <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; It is a Web application designed to create meetings with friends and acquaintances in various places.</li>
+              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; It is a Web application, a simple chat made on ActionCable WebSockets.</li>
             </ul>
             <p>
               Other projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>.
@@ -285,13 +286,13 @@
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Bachelor's Degree</p>
             <p>August 2011 &mdash; September 2016</p>
+            <p><a href="http://www.bmstu.ru/en">Official site</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Bauman Moscow State Technical University</strong></h5>
             <strong>Faculty:</strong> Informatics and Control Systems<br>
             <strong>Sub-Faculty:</strong> Computer Systems, Complexes and Networks<br>
             <strong>Speciality:</strong> Computer Science and Engineering<br>
-            <a href="http://www.bmstu.ru/en">Official site</a>
           </div>
         </div>
       </div>
@@ -310,18 +311,19 @@
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Trainee</p>
             <p>September 2018 &mdash; April 2019</p>
+            <p><a href="https://goodprogrammer.ru/">Official site</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Online-school Good Programmer</strong></h5>
             Ruby on Rails intensive course.&nbsp;
             <a href="https://goodprogrammer.ru/certificates/5524fd4871f75c3054ae">Certificate</a><br>
-            <a href="https://goodprogrammer.ru/">Official site</a>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Student</p>
             <p>April 2018 &mdash; December 2018</p>
+            <p><a href="https://englishtochka.ru/">Official site</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Online-school EnglishTochka by Alex Rubanov</strong></h5>
@@ -329,7 +331,6 @@
             <a href="http://www.engtochka.ru/certtest/feb2018/710632ddb843880b8562e83e9cbae2c9.html">#1</a>&nbsp;
             <a href="http://www.engtochka.ru/certtest/sept2018/f2c524670d73dc64059949ea065ddc87.html">#2</a>&nbsp;
             <a href="http://www.engtochka.ru/certtest/nov2018/d0bad2c5f9f17eb73957a4d003ba77a8.html">#3</a><br>
-            <a href="https://englishtochka.ru/">Official site</a>
           </div>
         </div>
       </div>
