--- a/russian_index.html
+++ b/russian_index.html
@@ -148,6 +148,7 @@
             <ul>
               <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; это веб-приложение, клон известного сайта <a href="https://ask.fm/">ask.fm</a>.</li>
               <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; это веб-приложение, предназначеное для создания встречи с друзьями и знакомыми в различных местах.</li>
+              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; это веб-приложение, простой чат, сделанный на ActionCable вебсокетах.</li>
             </ul>
             <p>
               Другие проекты на Ruby и Ruby on Rails можно посмотреть на моём <a href="https://github.com/cuurjol">GitHub профиле</a>.
@@ -234,7 +235,7 @@
           <div class="two-thirds column">
             <h5><strong>Обязанности:</strong></h5>
             <ul>
-              <li>Создание и улучшение системы электронного документооборота, разработанную на базе платформы Microsoft SharePoint</li>
+              <li>Создание и улучшение системы электронного документооборота, разработанную на базе платформы Microsoft SharePoint.</li>
               <li>Участие в обновлении архитектуры системы на ASP.NET MVC/Core MVC.</li>
               <li>Участие в принятии технических решений.</li>
               <li>Исправление возникающих ошибок у пользователей.</li>
@@ -287,13 +288,13 @@
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Бакалавр</p>
             <p>Август 2011 &mdash; Сентябрь 2016</p>
+            <p><a href="http://www.bmstu.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Московский государственный технический университет им. Н.Э. Баумана</strong></h5>
             <strong>Факультет:</strong> Информатика и системы управления<br>
             <strong>Кафедра:</strong> Компьютерные системы и сети<br>
             <strong>Специализация:</strong> Информатика и вычислительная техника<br>
-            <a href="http://www.bmstu.ru/">Официальный сайт</a>
           </div>
         </div>
       </div>
@@ -312,18 +313,19 @@
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Стажёр</p>
             <p>Сентябрь 2018 &mdash; Апрель 2019</p>
+            <p><a href="https://goodprogrammer.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Онлайн-школа Хороший Программист</strong></h5>
             Интенсивный курс по Ruby on Rails.&nbsp;
             <a href="https://goodprogrammer.ru/certificates/5524fd4871f75c3054ae">Сертификат</a><br>
-            <a href="https://goodprogrammer.ru/">Официальный сайт</a>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Студент</p>
             <p>Апрель 2018 &mdash; Декабрь 2018</p>
+            <p><a href="https://englishtochka.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Онлайн-школа EnglishTochka Алекса Рубанова</strong></h5>
@@ -331,7 +333,6 @@
             <a href="http://www.engtochka.ru/certtest/feb2018/710632ddb843880b8562e83e9cbae2c9.html">#1</a>&nbsp;
             <a href="http://www.engtochka.ru/certtest/sept2018/f2c524670d73dc64059949ea065ddc87.html">#2</a>&nbsp;
             <a href="http://www.engtochka.ru/certtest/nov2018/d0bad2c5f9f17eb73957a4d003ba77a8.html">#3</a><br>
-            <a href="https://englishtochka.ru/">Официальный сайт</a>
           </div>
         </div>
       </div>
