Add English and Russian resumes in pdf format

--- a/russian_index.html
+++ b/russian_index.html
@@ -92,7 +92,14 @@
               <i class="fas fa-circle"></i>
               <i class="fab fa-github fa-inverse" data-fa-transform="shrink-6"></i>
             </div>
-            <div class="media-content"><a href="https://github.com/Cuurjol">Cuurjol</a></div>
+            <div class="media-content"><a href="https://github.com/cuurjol">cuurjol</a></div>
+          </div>
+          <div class="media margin-bottom-1x">
+            <div class="media-left fa-layers fa-fw fa-2x">
+              <i class="fas fa-circle"></i>
+              <i class="fas fa-file-pdf fa-inverse" data-fa-transform="shrink-6"></i>
+            </div>
+            <div class="media-content"><a href="resume/Кирилл Ильин.pdf">Скачать резюме</a></div>
           </div>
         </div>
       </div>
