Hide linkedin link and update residence

--- a/russian_index.html
+++ b/russian_index.html
@@ -44,10 +44,7 @@
               <i class="fas fa-home fa-inverse" data-fa-transform="shrink-6"></i>
             </div>
             <div class="media-content">
-              <address>
-                Россия, Московская область<br>
-                Хотьково<br>
-              </address>
+              <address>Россия, Московская область, Хотьково</address>
             </div>
           </div>
           <div class="media margin-bottom-1x">
@@ -64,13 +61,13 @@
             </div>
             <div class="media-content"><a href="mailto:cuurjol@gmail.com">cuurjol@gmail.com</a></div>
           </div>
-          <div class="media margin-bottom-1x">
+<!--           <div class="media margin-bottom-1x">
             <div class="media-left fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
               <i class="fab fa-linkedin-in fa-inverse" data-fa-transform="shrink-6"></i>
             </div>
             <div class="media-content"><a href="https://www.linkedin.com/in/cuurjol/">Кирилл Ильин</a></div>
-          </div>
+          </div> -->
           <div class="media margin-bottom-1x">
             <div class="media-left fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
