Update resume (add job places, 'About me' section refactoring)

--- a/index.html
+++ b/index.html
@@ -98,47 +98,47 @@
         <div class="row">
           <div class="twelve columns margin-top-1x">
             <p>
-              Looking for a job Full Stack Ruby on Rails developer. I consider remote work or relocation to another country (preferably
-              European countries).
+              I am looking for a job as a Ruby on Rails developer. I consider remote work or relocation to another country (preferably European countries).
             </p>
             <p>
               I have been programming for a long time, starting with school and university studies and ending with today. At university, I was
-              pretty good at programming languages ​​like Pascal (Delphi) and C/C++ with using the QT framework. I also studied the Ruby
-              programming language and the Ruby on Rails framework. But I could not learn it at university due to the poor level of teaching.
-              In the end, I didn't want to do development on Ruby on Rails anymore in the future.
-            </p>
-            <p>
-              After graduating from university, I found a job as a programmer. My main programming language was C# and I had been developing
-              applications for a year and a half. At that time, I managed to work in two companies. But, unfortunately, for various reasons, I
-              had to leave these companies and look for a new job, where I could work in a professional team, constantly improve my level of
-              development and become a C# developer at a decent level. All my attempts to find a job were unsuccessful. And I needded to
-              somehow solve this problem: either I continue to study and practice the C# programming language or completely change my
-              professional activity. I chose the first solution, but instead of learning the C# programming language, I began to learn the
-              Ruby and Ruby on Rails. So, I wanted to become a Ruby on Rails developer, despite my negative experiences in the past.
+              pretty good at programming languages ​​like Pascal (Delphi) and C/C++ with using the QT framework. After graduating from university, 
+              I found a job as a programmer. My main programming language was C# and I had been developing applications for a year and a half. 
+              For various reasons, I gave up C# and switched to the Ruby programming language.
             </p>
             <p>
               I started developing in Ruby on Rails from September 2018 and continue to this day. During this period of time, I successfully
               completed an intensive Ruby on Rails course from the online school <a href="https://goodprogrammer.ru/">Good Programmer</a> and
-              found my first job as a Ruby on Rails developer.
+              worked in several projects as a Ruby on Rails developer.
             </p>
             <p class="margin-bottom-1x"><strong>Main development skills:</strong></p>
             <ul>
               <li>Developing applications in the Ruby programming language using the Ruby on Rails framework.</li>
               <li>Applying in designing applications of the basic principles of OOP, MVC, REST.</li>
+              <li>Experience with microservices architecture and dry-rb ecosystem in applications.</li>
               <li>Testing applications using the Rspec and Capybara gems.</li>
-              <li>Using SQLite and PostreSQL DBMS in applications.</li>
+              <li>Experience with SQLite, PostgreSQL, MongoDB databases in applications.</li>
               <li>Processing and creating data in XML, JSON.</li>
               <li>Deploying applications on Heroku, VPS (nginx + passenger) or using the Capistrano gem.</li>
-              <li>Creating websites using HTML, CSS, JavaScript (jQuery).</li>
+              <li>Simple websites layout using HTML, CSS, JavaScript (jQuery).</li>
             </ul>
             <p class="margin-bottom-1x"><strong>My examples of projects on Ruby on Rails:</strong></p>
             <ul>
-              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; It is a Web application, a clone of the famous Web site <a href="https://ask.fm/">ask.fm</a>.</li>
-              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; It is a Web application designed to create meetings with friends and acquaintances in various places.</li>
-              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; It is a Web application, a simple chat made on ActionCable WebSockets.</li>
+              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; web application, a clone of the famous Web site <a href="https://ask.fm/">ask.fm</a>
+              	(<a href="https://github.com/cuurjol/askme">project repository</a>).
+              </li>
+              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; web application designed to create meetings with friends and acquaintances in various places 
+              	(<a href="https://github.com/cuurjol/barbecue">project repository</a>).
+              </li>
+              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; web application, a simple chat made on ActionCable WebSockets 
+              	(<a href="https://github.com/cuurjol/leramiz">project repository</a>).
+              </li>
             </ul>
             <p>
-              Other projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>.
+              Other projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>. I also actively started solving various programming 
+              tasks and spent most of my time on the <a href="https://edabit.com/">Edabit</a> site. My list of tasks solved from there &mdash; 
+              <a href="https://gist.github.com/cuurjol/e4d214a91e4137cf5c8216b6e388079e">edabit tasks</a>. In the future, I will try other sites for solving programming tasks such 
+              as exercism, Codewars, LeetCode, HackerRank and so on.
             </p>
           </div>
         </div>
@@ -158,12 +158,12 @@
           <div class="one-half column margin-top-1x">
             <h5><strong>Technical Skills:</strong></h5>
               <ul>
-              	<li><strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST</li>
+              	<li><strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST, dry-rb</li>
                 <li><strong>Front-end</strong> &mdash; HTML, CSS, JavaScript, jQuery, Skeleton, Bootstrap</li>
-                <li><strong>Databases</strong> &mdash; SQLite, PostgreSQL, MSSQL</li>
+                <li><strong>Databases</strong> &mdash; SQLite, PostgreSQL, MongoDB</li>
                 <li><strong>Version control system</strong> &mdash; Git (Github, GitLab)</li>
                 <li><strong>DevOps</strong> &mdash; Heroku, AWS, Nginx/Passenger, Capistrano</li>
-                <li><strong>Other skills</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi</li>
+                <li><strong>Previously used skills</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi</li>
               </ul>
           </div>
           <div class="one-half column margin-top-1x">
@@ -189,6 +189,49 @@
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Ruby on Rails Developer</p>
+            <p>March 2020 &mdash; until now</p>
+            <p>Overteam, Moscow, Russia</p>
+            <p><a href="https://overteam.ru/">Official site</a></p>
+          </div>
+          <div class="two-thirds column">
+            <h5><strong>Responsibilities:</strong></h5>
+            <ul>
+              <li>Creating new and improving an existing functionality in the sanatory.ru online booking service.</li>
+              <li>Providing a technical support for the synchronization of tariffs for sanatoriums.</li>
+            </ul>
+            <p class="margin-bottom-1x">
+              I got a fifth job as a Ruby on Rails developer at Overteam LLC on March 16, 2020. I was providing a technical support on a project 
+              for <a href="https://sanatory.ru/">sanatory.ru</a> online booking of sanatoriums. During all the time I worked in this company, 
+              I managed to do the following things:
+              <ul>
+                <li>Provided technical support for a synchronization of tariffs more than 100 sanatoriums.</li>
+                <li>Created a service that collects information about reviews of sanatoriums from <a href="https://www.tripadvisor.ru">tripadvisor.ru</a>.</li>
+              </ul>
+          </div>
+        </div>
+        <div class="row margin-top-1x margin-bottom-3x">
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Ruby on Rails Developer</p>
+            <p>November 2019 &mdash; February 2020</p>
+            <p>Decart IT-production, Voronezh, Russia</p>
+            <p><a href="https://dcrt.it/">Official site</a></p>
+          </div>
+          <div class="two-thirds column">
+            <h5><strong>Responsibilities:</strong></h5>
+            <ul>
+              <li>Optimization and code refactoring.</li>
+              <li>Fixing user bugs.</li>
+            </ul>
+            <p class="margin-bottom-1x">
+              I got a fourth job as a Ruby on Rails developer at Decart IT-production LLC on November 11, 2019. The company acted as a subcontractor 
+              for <a href="https://jet.su/en/">Jet Infosystems LLC</a>, which has a system of unified state register of real estate. I was engaged 
+              in technical support of the system, eliminating incidents accumulated over many years (user bugs, optimization and code refactoring).
+              After 4 months of work, I made a decision to quit the company due to poor workflows within Jet Infosystems LLC.
+          </div>
+        </div>
+        <div class="row margin-top-1x margin-bottom-3x">
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Ruby on Rails Developer</p>
             <p>March 2019 &mdash; August 2019</p>
             <p>SoftTelematics, Moscow, Russia</p>
             <p><a href="https://natelsys.ru/">Official site</a></p>
@@ -197,12 +240,12 @@
             <h5><strong>Responsibilities:</strong></h5>
             <ul>
               <li>Developing a new functionality for a single digital platform for collecting tolls on the roads.</li>
-              <li>Optimization and refactoring code.</li>
+              <li>Optimization and code refactoring.</li>
               <li>Writing integration and unit tests.</li>
               <li>Fixing user bugs.</li>
             </ul>
             <p class="margin-bottom-1x">
-              On 11 March 2019, I got a third job as a Ruby on Rails developer at SoftTelematics. I was developing the unified digital system
+              I got a third job as a Ruby on Rails developer at SoftTelematics LLC on March 11, 2019. I was developing the unified digital system
               of toll roads in Russia. After 6 months of work, I made a decision to leave the company for several reasons:
             </p>
             <ul>
@@ -227,7 +270,7 @@
               <li>Fixing user bugs.</li>
             </ul>
             <p>
-              On 28 May 2018, I got a second job as a software engineer at EOS (electronic office systems). I was developing an electronic
+              I got a second job as a software engineer at EOS LLC (electronic office systems) on May 28, 2018. I was developing an electronic
               document management system developed on the basis of the Microsoft SharePoint platform. After 3 months of work, the company
               management could not find me the amount of work for my position, because the company hired me as a junior specialist, and I left
               the company.
@@ -250,7 +293,7 @@
               <li>Configuring the CRM system.</li>
             </ul>
             <p>
-              On 23 January 2017, after graduating from university, I got a first job as a programmer at TOPCRM LLC. I was developing a CRM
+              I got a first job as a programmer at TOPCRM LLC on January 23, 2017, after graduating from university. I was developing a CRM
               system on the Terrasoft BPM'Online platform. After 15 months of successful work in the company, I began to understand that I
               don't want to work here anymore because of the negative experience of developing the Terrasoft BPM'Online platform, and also
               because I had a little different idea of the programmer work. As a result, I left the company and I didn't want to develop the
