--- a/russian_index.html
+++ b/russian_index.html
@@ -98,48 +98,47 @@
         <div class="row">
           <div class="twelve columns margin-top-1x">
             <p>
-              Ищу работу Full Stack Ruby on Rails разработчика. Рассматриваю удалённую работу или релокацию в другую страну (предпочтительно
-              европейские страны).
+              Я ищу работу на позицию Ruby on Rails разработчика. Я рассматриваю удалённую работу или релокацию в другую страну (предпочтительно европейские страны).
             </p>
             <p>
-              Я занимаюсь программированием достаточно давно, начиная с учёбы в школе и университете и заканчивая сегодняшним днём. В
-              университете я достаточно неплохо владел такими языками программирования, как Pascal (Delphi) и C/C++ с использованием
-              фреймворка QT. Также я изучал язык программирования Ruby и фреймворк Ruby on Rails. Но я так и не смог изучить его в
-              университете из-за плохого уровня преподавания. В итоге я не хотел больше заниматься разработкой на Ruby on Rails в будущем.
-            </p>
-            <p>
-              После окончания учёбы в университете я нашёл себе работу программиста. Основным языком программирования у меня был C# и полтора
-              года я разрабатывал приложения. На тот период времени я успел поработать в двух компаниях. Но, к сожалению, по разным причинам
-              мне пришлось уйти из этих компаний и искать новую работу, где я мог бы работать в профессиональной команде, постоянно улучшать
-              свой уровень разработки и стать разработчиком C# на достойном уровне. Все мои попытки поиска работы были безуспешными. И мне
-              нужно было как-то решить данную проблему: либо я продолжаю изучать и практиковать язык программирования C#, либо полностью
-              меняю свою профессиональную деятельность. Я выбрал первый вариант решения проблемы, но вместо изучения языка программирования
-              С#, я начал изучать Ruby и Ruby on Rails. Таким образом, я захотел стать Ruby on Rails разработчиком, несмотря на мой негативный
-              опыт в прошлом.
+              Я занимаюсь программированием достаточно давно, начиная с учёбы в школе и университете и заканчивая сегодняшним днём. В университете я достаточно 
+              неплохо владел такими языками программирования, как Pascal (Delphi) и C/C++ с использованием фреймворка QT. После окончания учёбы в университете 
+              я нашёл себе работу в роли программиста. Основным языком программирования у меня был C#, и полтора года я разрабатывал приложения. По разным причинам 
+              я отказался от C# и перешел на язык программирования Ruby.
             </p>
             <p>
               Я начал заниматься разработкой на Ruby on Rails с сентября 2018 года и продолжаю по сей день. За этот период времени я успешно
-              закончил интенсивный курс по Ruby on Rails от онлайн-школы <a href="https://goodprogrammer.ru/">Хороший Программист</a> и нашёл
-              свою первую работу Ruby on Rails разработчика.
+              закончил интенсивный курс по Ruby on Rails от онлайн-школы <a href="https://goodprogrammer.ru/">Хороший Программист</a> и работал 
+              в нескольких проектах в роли Ruby on Rails разработчика.
             </p>
             <p class="margin-bottom-1x"><strong>Основные навыки разработки:</strong></p>
             <ul>
               <li>Разработка приложений на языке программирования Ruby с использованием фреймворка Ruby on Rails.</li>
               <li>Применение в разработке приложений основных принципов ООП, MVC, REST.</li>
+              <li>Опыт работы с микросервисной архитектурой и экосистемой dry-rb в приложениях.</li>
               <li>Тестирование приложений с использованием гемов Rspec и Capybara.</li>
-              <li>Использование СУБД SQLite и PostreSQL в приложениях.</li>
+              <li>Опыт работы с базами данных SQLite, PostgreSQL, MongoDB в приложениях.</li>
               <li>Обработка и создание данных в формате XML, JSON.</li>
               <li>Развёртывание приложений на Heroku, VPS (nginx + passenger) или с использованием гема Capistrano.</li>
-              <li>Создание сайтов с использованием HTML, CSS, JavaScript (JQuery).</li>
+              <li>Простая вёрстка сайтов с использованием HTML, CSS, JavaScript (JQuery).</li>
             </ul>
             <p class="margin-bottom-1x"><strong>Мои примеры проектов на Ruby on Rails:</strong></p>
             <ul>
-              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; это веб-приложение, клон известного сайта <a href="https://ask.fm/">ask.fm</a>.</li>
-              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; это веб-приложение, предназначеное для создания встречи с друзьями и знакомыми в различных местах.</li>
-              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; это веб-приложение, простой чат, сделанный на ActionCable вебсокетах.</li>
+              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; веб-приложение, клон известного сайта <a href="https://ask.fm/">ask.fm</a> 
+                (<a href="https://github.com/cuurjol/askme">репозиторий проекта</a>).
+              </li>
+              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; веб-приложение, предназначеное для создания встречи с друзьями и знакомыми в различных местах 
+                (<a href="https://github.com/cuurjol/barbecue">репозиторий проекта</a>).
+              </li>
+              <li><a href="https://cuurjol-leramiz.herokuapp.com/">LERAMIZ</a> &mdash; веб-приложение, простой чат, сделанный на ActionCable вебсокетах 
+                (<a href="https://github.com/cuurjol/leramiz">репозиторий проекта</a>).
+              </li>
             </ul>
             <p>
-              Другие проекты на Ruby и Ruby on Rails можно посмотреть на моём <a href="https://github.com/cuurjol">GitHub профиле</a>.
+              Другие проекты на Ruby и Ruby on Rails можно посмотреть на моём <a href="https://github.com/cuurjol">GitHub профиле</a>. Также я активно начал решать различные задачи 
+              по программированию и большую часть времени я потратил на сайте <a href="https://edabit.com/">Edabit</a>. Мой список решённых оттуда задач &mdash; 
+              <a href="https://gist.github.com/cuurjol/e4d214a91e4137cf5c8216b6e388079e">edabit tasks</a>. В будущем я буду пробовать другие сайты для решения задач по программированию, 
+              такие как exercism, Codewars, LeetCode, HackerRank и так далее.
             </p>
           </div>
         </div>
@@ -159,12 +158,12 @@
           <div class="one-half column margin-top-1x">
             <h5><strong>Технические навыки:</strong></h5>
               <ul>
-                <li><strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST</li>
+                <li><strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST, dry-rb</li>
                 <li><strong>Front-end</strong> &mdash; HTML, CSS, JavaScript, jQuery, Skeleton, Bootstrap</li>
-                <li><strong>Databases</strong> &mdash; SQLite, PostgreSQL, MSSQL</li>
+                <li><strong>Databases</strong> &mdash; SQLite, PostgreSQL, MongoDB</li>
                 <li><strong>Version control system</strong> &mdash; Git (Github, GitLab)</li>
                 <li><strong>DevOps</strong> &mdash; Heroku, AWS, Nginx/Passenger, Capistrano</li>
-                <li><strong>Other skills</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi</li>
+                <li><strong>Ранее использованные навыки</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi</li>
               </ul>
           </div>
           <div class="one-half column margin-top-1x">
@@ -187,6 +186,50 @@
         </div>
       </div>
       <div class="info-block-content-active">
+        <div class="row margin-top-1x margin-bottom-3x">
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Разработчик Ruby on Rails</p>
+            <p>Март 2020 &mdash; по настоящее время</p>
+            <p>Овертим, Москва, Россия</p>
+            <p><a href="https://overteam.ru/">Официальный сайт</a></p>
+          </div>
+          <div class="two-thirds column">
+            <h5><strong>Обязанности:</strong></h5>
+            <ul>
+              <li>Создание нового и улучшение существующего функционала в сервисе онлайн бронирования санаториев sanatory.ru.</li>
+              <li>Оказание технической поддержки по синхронизации тарифов для санаториев.</li>
+            </ul>
+            <p class="margin-bottom-1x">
+              16 марта 2020 года я устроился на пятую работу на должность разработчика Ruby on Rails в компанию Овертим. Я оказывал техническую поддержку 
+              на проекте по онлайн бронированию санаториев <a href="https://sanatory.ru/">sanatory.ru</a>. За всё время работы в этой компании я успел 
+              сделать следующие вещи:
+              <ul>
+                <li>Оказал техническую поддержку по синхронизации тарифов более 100 санаториям.</li>
+                <li>Создал сервис, который собирает информацию об отзывах санаториев с сайта <a href="https://www.tripadvisor.ru">tripadvisor.ru</a>.</li>
+              </ul>
+          </div>
+        </div>
+        <div class="row margin-top-1x margin-bottom-3x">
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Разработчик Ruby on Rails</p>
+            <p>Ноябрь 2019 &mdash; Февраль 2020</p>
+            <p>ООО «Декарт Айти», Воронеж, Россия</p>
+            <p><a href="https://dcrt.it/">Официальный сайт</a></p>
+          </div>
+          <div class="two-thirds column">
+            <h5><strong>Обязанности:</strong></h5>
+            <ul>
+              <li>Оптимизация и рефакторинг кода.</li>
+              <li>Исправление возникающих ошибок у пользователей.</li>
+            </ul>
+            <p class="margin-bottom-1x">
+              11 ноября 2019 года я устроился на четвёртую работу на должность разработчика Ruby on Rails в компанию ООО «Декарт Айти». 
+              Компания выступала в роли субподрядчика для компании <a href="https://jet.su">ООО «Инфосистемы Джет»</a>, у которой был 
+              проект ЕГРН &mdash; система единого государственного реестра недвижимости. Я занимался технической поддержкой этого проекта, 
+              устраняя накопившиеся за многие года инциденты (ошибки у пользователей, оптимизация и рефакторинг кода). После 4 месяцев работы 
+              я принял решение уволиться из компании из-за плохо налаженных рабочих процессов внутри компании ООО «Инфосистемы Джет».
+          </div>
+        </div>
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Разработчик Ruby on Rails</p>
